--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,7 @@ body{
         flex-direction: column;
         justify-content: center;
         align-items: center;
+        height: 100%;
 }
 a{
         text-decoration: none;
